--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "react": "0.0.0-experimental-f83903bf-20250212",
-    "react-dom": "0.0.0-experimental-f83903bf-20250212"
+    "react-dom": "0.0.0-experimental-f83903bf-20250212",
+    "reset-css": "^5.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.26.8",
@@ -19,7 +20,9 @@
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "babel-loader": "^9.2.1",
+    "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.3",
+    "style-loader": "^4.0.0",
     "typescript": "^5.7.3",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1",
