--- a/package.json
+++ b/package.json
@@ -9,17 +9,16 @@
     "build": "webpack"
   },
   "dependencies": {
-    "react": "0.0.0-experimental-f83903bf-20250212",
-    "react-dom": "0.0.0-experimental-f83903bf-20250212",
-    "react-router": "^7.1.5",
+    "react": "^0.0.0-experimental-914319ae-20250423",
+    "react-dom": "^0.0.0-experimental-914319ae-20250423",
     "reset-css": "^5.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.26.8",
     "@babel/preset-react": "^7.26.3",
     "@babel/preset-typescript": "^7.26.0",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
     "babel-loader": "^9.2.1",
     "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.3",
